working on the parsing

--- a/config.conf
+++ b/config.conf
@@ -8,7 +8,8 @@ server {
 	#if the content is too large return 413 error code
 	location / {
 		root /data/www; #Serve static file from this directory
-		autoindex off;
+		index index.html #Set default file
+		autoindex off; #Disable directory listing
 		methods GET POST; #Allows GET POST requests
 
 	}
@@ -17,10 +18,21 @@ server {
 		autoindex on; #Enable directory listing
 		methods POST; #Allow only POST requests
 	}
+	location ~\.php$ { #Execute the CGI on file extension like .php
+		cgi_pass /usr/bin/php-cgi;
+	}
+	location /upload {
+		upload_store /var/www/upload;
+		allowed_methods POST;
+	}
 }
 
 server {
-
+	listen 80
+	server_name example.com www.example.com;
+	location /oldpage {
+		return 301 /new_page
+	}
 }
 
 
@@ -52,3 +64,4 @@ server {
 #		banner.jpg
 #		logo.png
 #	*if autoindex is OFF, the server will return a 403 Forbidden or 404 Not Found
+# the webserver has to generate an HTML page that lists the files in a directory when there is no index.html or index.php file
