Worked with tokenizer

--- a/config.conf
+++ b/config.conf
@@ -16,7 +16,7 @@ server {
 	location /images/ {
 		root /data;
 		autoindex on; #Enable directory listing
-		methods POST; #Allow only POST requests
+		allowed_methods POST; #Allow only POST requests
 	}
 	location ~\.php$ { #Execute the CGI on file extension like .php
 		cgi_pass /usr/bin/php-cgi;
