the tokenizer is done

--- a/config.conf
+++ b/config.conf
@@ -1,31 +1,31 @@
-server {
-	listen	8080; #Port
-	host		127.0.0.1; #Host
-	server_name mywebsite.com #Setup server name (optional), should work with and without it
+# server {
+# 	listen	8080; #Port
+# 	host		127.0.0.1; #Host
+# 	server_name mywebsite.com #Setup server name (optional), should work with and without it
 
-	default_error_page /errors/400.html #Default error page
-	client_max_body 10M; #limit client body (do not accept until a certain number and also what about the letter?)
-	#if the content is too large return 413 error code
-	location / {
-		root /data/www; #Serve static file from this directory
-		index index.html #Set default file
-		autoindex off; #Disable directory listing
-		methods GET POST; #Allows GET POST requests
+# 	default_error_page /errors/400.html #Default error page
+# 	client_max_body 10M; #limit client body (do not accept until a certain number and also what about the letter?)
+# 	#if the content is too large return 413 error code
+# 	location / {
+# 		root /data/www; #Serve static file from this directory
+# 		index index.html #Set default file
+# 		autoindex off; #Disable directory listing
+# 		methods GET POST; #Allows GET POST requests
 
-	}
-	location /images/ {
-		root /data;
-		autoindex on; #Enable directory listing
-		allowed_methods POST; #Allow only POST requests
-	}
-	location ~\.php$ { #Execute the CGI on file extension like .php
-		cgi_pass /usr/bin/php-cgi;
-	}
-	location /upload {
-		upload_store /var/www/upload;
-		allowed_methods POST;
-	}
-}
+# 	}
+# 	location /images/ {
+# 		root /data;
+# 		autoindex on; #Enable directory listing
+# 		allowed_methods POST; #Allow only POST requests
+# 	}
+# 	location ~\.php$ { #Execute the CGI on file extension like .php
+# 		cgi_pass /usr/bin/php-cgi;
+# 	}
+# 	location /upload {
+# 		upload_store /var/www/upload;
+# 		allowed_methods POST;
+# 	}
+# }
 
 server {
 	listen 80
