working on the request from the client

--- a/test.conf
+++ b/test.conf
@@ -1,20 +1,37 @@
-server{
-	listen 127.2.4.5:80;
-	server_name example.com www.example.com;
-	location /oldpage {
-		root /var/www;
-		index index.html;
-		}
+server {
+
+	client_max_body 4G;
+	# error_page 404;
+	server_name localhost www.eampl.com;
+	auto_index off;
+	index index.html; 
+	root /var;
+	location / {
+		allowed_methods GET GET GET POST;
+	}
 }
 
-server}
-	listen 127.2.4.5:80;
-	server_name example.com www.example.com;
-	location /oldpage }
-		root /var/www;
-		index index.html;
-		{
-{
+server {
+	host 2.2.2.2;
+	listen 80;
+	index index.html; 
+	root /var;
+}
+
+# server {
+# 	listen 255.2.4.780; 
+# 	host 227.45;
+# 	server_name example.com www.example.com;
+# 	index index.html;
+# 	location /oldpage {
+# 		root /var/www;
+# 		index another.html;
+# 	}
+# }
 
 
 #what if after
+#locations with two paths the same
+#each location should have an index or root if server doesnt have an index or root
+#what happens when you have auto_index and an index?
+#sapce on error on Invalid IP
