refactored server storage and almost done with setserver function, so program is able to handle multiple servers on the same ip/host

--- a/test.conf
+++ b/test.conf
@@ -1,22 +1,26 @@
 server {
-
-	client_max_body 4G;
-	# error_page 404;
-	server_name localhost www.eampl.com;
-	auto_index off;
+	host localhost;
+	listen 8080;
+	server_name www.eampl.com;
 	index index.html; 
 	root /var;
-	location / {
-		allowed_methods GET GET GET POST;
-	}
 }
 
 server {
-	host 2.2.2.2;
-	listen 80;
+	host localhost;
+	listen 8040;
+	index index.html; 
+	server_name www.test.com test.com;
+	root /var;
+}
+
+server {
+	host 0.0.0.0;
+	listen 1025;
 	index index.html; 
 	root /var;
 }
+
 
 # server {
 # 	listen 255.2.4.780; 
