GET works with index.html

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -3,11 +3,11 @@ server {
 	host 127.0.0.1;
 	server_name localhost;
 	location / {
-        root /var/www;
+        root /variables/www;
 		index index.html;
 	}
 	location /img {
-		root /var/img/error_img;
+		root /variables/errors/img/error_img;
 		index deleted1.jpg;
 	}
 }
