Stuff working for Codam today Sunday

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -7,7 +7,7 @@ server {
 		index index.html;
 	}
 	location /img {
-		root /variables/errors/img/error_img;
-		index deleted1.jpg;
+		root /variables/img/error_img;
+		index hello.html;
 	}
 }
