GET works for RESPONSE we gotta check the directory listing

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -6,8 +6,12 @@ server {
         root /variables/www;
 		index index.html;
 	}
-	location /img {
-		root /variables/img/error_img;
-		index hello.html;
+	location /blog {
+		root /variables/uploads;
+		index upload_test.html;
+	}
+	location /gallery {
+		root /variables;
+		auto_index on;
 	}
 }
