trying to stress test our code with allowed_methods POST on /

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -4,6 +4,7 @@ server {
 	server_name localhost;
 	location / {
         root /variables/www;
+		allowed_methods POST;
 		index index.html;
 	}
 	location /blog {
