we get a post request now, we need to fix client_max_body, we need to implement CGI so it can parse a chunked request

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -4,15 +4,22 @@ server {
 	server_name localhost;
 	location / {
         root /variables/www;
-		allowed_methods POST;
+		allowed_methods GET;
 		index index.html;
 	}
 	location /blog {
-		root /variables/uploads;
+		root /variables/forms;
 		index upload_test.html;
+	}
+	location /uploads {
+		root /variables/uploads;
+		allowed_methods POST DELETE;
+		client_max_body 1k;
 	}
 	location /gallery {
 		root /variables;
 		auto_index on;
 	}
 }
+
+#uploads --> "//uploads"
