Added the CGI to the project

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -12,13 +12,18 @@ server {
 		index upload_test.html;
 	}
 	location /uploads {
-		root /variables/uploads;
-		allowed_methods POST DELETE;
+		root /variables/cgi;
 		client_max_body 1k;
+		index upload_form.py;
+		allowed_methods POST DELETE;
 	}
 	location /gallery {
 		root /variables;
 		auto_index on;
+	}
+	location /cgi-bin/time{
+		root /variables/cgi
+		index time.py
 	}
 }
 
