apparently client is not receiving the appropriate headers as these are empty but request parser is parsing them, are they been saved?

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -22,8 +22,8 @@ server {
 		auto_index on;
 	}
 	location /cgi-bin/time{
-		root /variables/cgi
-		index time.py
+		root /variables/cgi;
+		index time.py;
 	}
 }
 
