CGI script not working and need to check if we can do the handle CGI thing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,11 @@
         "ranges": "cpp",
         "span": "cpp",
         "cinttypes": "cpp"
+    },
+    "github.copilot.enable": {
+        "*": false,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
     }
 }
