--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -21,9 +21,12 @@ server {
 		root /variables;
 		auto_index on;
 	}
-	location /cgi-bin/time{
+	location /cgi-bin{
 		root /variables/cgi;
 		index time.py;
+	}
+	location /img {
+		root /variables/img;
 	}
 }
 
