--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -2,29 +2,40 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name localhost;
+
 	location / {
         root /variables/www;
 		allowed_methods GET;
 		index index.html;
 	}
+
 	location /blog {
 		root /variables/forms;
 		index upload_test.html;
 	}
+
 	location /uploads {
 		root /variables/cgi;
-		client_max_body 1k;
+		client_max_body 1m;
 		index upload_form.py;
 		allowed_methods POST DELETE;
 	}
+
+	location /uploads/ {
+		root /variables/uploads;
+		auto_index on;
+	}
+
 	location /gallery {
 		root /variables;
 		auto_index on;
 	}
-	location /cgi-bin{
+
+	location /time{
 		root /variables/cgi;
 		index time.py;
 	}
+
 	location /img {
 		root /variables/img;
 	}
