POST works need to work on DELETE

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -14,6 +14,11 @@ server {
 		index upload_test.html;
 	}
 
+	location /delete {
+		root /variables/forms;
+		index delete_test.html;
+	}
+
 	location /uploads {
 		root /variables/cgi;
 		client_max_body 1m;
@@ -21,10 +26,10 @@ server {
 		allowed_methods POST DELETE;
 	}
 
-	location /uploads/ {
-		root /variables/uploads;
-		auto_index on;
-	}
+	# location /uploads/ {
+	# 	root /variables/uploads;
+	# 	auto_index on;
+	# }
 
 	location /gallery {
 		root /variables;
