Working on Delete

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -19,17 +19,16 @@ server {
 		index delete_test.html;
 	}
 
+	location /cgi-bin {
+		root /variables/cgi;
+	}
+
 	location /uploads {
 		root /variables/cgi;
 		client_max_body 1m;
 		index upload_form.py;
 		allowed_methods POST DELETE;
 	}
-
-	# location /uploads/ {
-	# 	root /variables/uploads;
-	# 	auto_index on;
-	# }
 
 	location /gallery {
 		root /variables;
