--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -4,7 +4,7 @@ server {
 	server_name localhost;
 
 	location / {
-        root /variables/www;
+    root /variables/www;
 		allowed_methods GET;
 		index index.html;
 	}
@@ -45,4 +45,13 @@ server {
 	}
 }
 
-#uploads --> "//uploads"
+# server {
+# 	listen 8081;
+# 	host 127.0.0.1;
+# 	server_name localhost;
+# 	location / {
+#     root /variables/www;
+# 		allowed_methods GET;
+# 		index index_2.html;
+# 	}
+# }
