The webserver works but no redirections nor it works properly with two servers

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -43,12 +43,20 @@ server {
 	location /img {
 		root /variables/img;
 	}
+
+	location /old_blog {
+		return 301 /blog;
+	}
+
+	location /search {
+		return 302 https://www.google.com;
+	}
 }
 
 # server {
-# 	listen 8081;
+# 	listen 8080;
 # 	host 127.0.0.1;
-# 	server_name localhost;
+# 	server_name mywebsite.com;
 # 	location / {
 #     root /variables/www;
 # 		allowed_methods GET;
