Chriss go ahead

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -25,7 +25,7 @@ server {
 
 	location /uploads {
 		root /variables/cgi;
-		client_max_body 1m;
+		client_max_body 1g;
 		index upload_form.py;
 		allowed_methods POST DELETE;
 	}
@@ -53,13 +53,13 @@ server {
 	}
 }
 
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-# 	location / {
-#     root /variables/www;
-# 		allowed_methods GET;
-# 		index index_2.html;
-# 	}
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+	location / {
+    root /variables/www;
+		allowed_methods GET;
+		index index_2.html;
+	}
+}
