fixed zombie processes

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -4,8 +4,7 @@ server {
 	server_name localhost;
 
 	location / {
-    root /variables/www;
-		allowed_methods GET;
+    root /variables;
 		index index.html;
 	}
 
