--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -1,7 +1,7 @@
 server {
 	listen 8080;
 	host 127.0.0.1;
-	server_name localhost;
+	server_name localhost localhost.com;
 
 	location / {
     root /variables;
@@ -57,7 +57,7 @@ server {
 	host 127.0.0.1;
 	server_name mywebsite.com;
 	location / {
-    root /variables/www;
+    root /variables;
 		allowed_methods GET;
 		index index_2.html;
 	}
