It compiles, but parsing is not working anymorre, I gotta debug it

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,8 @@
         "*.tcc": "cpp",
         "ranges": "cpp",
         "span": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "*.tpp": "cpp"
     },
     "github.copilot.enable": {
         "*": false,
