--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -2,6 +2,9 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name mywebsite.com;
+  root /data/www;
+  index index.html;
+	location / {
     root /data/www;
-    index index.html;
+  }
 }
