fixed some parsing and CGI issues, CGI is working now

--- a/configuration_files/test.conf
+++ b/configuration_files/test.conf
@@ -1,64 +1,64 @@
 # Server block without location (WORKS)
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-#     root /data/www;
-#     index index.html;
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+    root /data/www;
+    index index.html;
+}
 
 # Server block with location and index inside, root outside (WORKS)
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-#     root /data/www;
-#     location / {
-#     index index.html;
-#     }
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+    root /data/www;
+    location / {
+    index index.html;
+    }
+}
 
 # Server block with location and root inside, index outside (WORKS)
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-#     index index.html;
-#     location / {
-#     root /data/www;
-#     }
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+    index index.html;
+    location / {
+    root /data/www;
+    }
+}
 
 # Server block with location for GET cgi (WORKS)
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-#     index index.html;
-#     location / {
-#     root /data/www;
-#     }
-#     location /time {
-#     root /data/cgi;
-#     index time.py;
-#     }
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+    index index.html;
+    location / {
+    root /data/www;
+    }
+    location /time {
+    root /data/cgi;
+    index time.py;
+    }
+}
 
 # Server block that should fail when running cgi as method is not allowed, error 405 (WORKS)
-# server {
-# 	listen 8080;
-# 	host 127.0.0.1;
-# 	server_name mywebsite.com;
-#     index index.html;
-#     location / {
-#     root /data/www;
-#     }
-#     location /time {
-#     root /data/cgi;
-#     index time.py;
-#     allowed_methods POST;
-#     }
-# }
+server {
+	listen 8080;
+	host 127.0.0.1;
+	server_name mywebsite.com;
+    index index.html;
+    location / {
+    root /data/www;
+    }
+    location /time {
+    root /data/cgi;
+    index time.py;
+    allowed_methods POST;
+    }
+}
 
 # Server block with explicit error_pages outside location
 server {
