--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -2,7 +2,6 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name localhost localhost.com;
-
 	location / {
     root /variables;
 		index index.html;
@@ -14,6 +13,7 @@ server {
 	}
 
 	location /delete {
+		error_page 404 /errors/411.html;
 		root /variables/forms;
 		index delete_test.html;
 	}
