--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -1,10 +1,12 @@
 server {
 	listen 8080;
 	host 127.0.0.1;
-	server_name mywebsite.com;
-  root /data/www;
+	server_name mywebsite.com mywebsite.com;
   index index.html;
+  root /data/www;
+  client_max_body 4G;
 	location / {
     root /data/www;
-  }
+	allowed_methods GET;
+	}
 }
