--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -4,6 +4,7 @@ server {
 	server_name mywebsite.com mywebsite.com;
   index index.html;
   root /data/www;
+	error_page 404 /variables/errors/411.html;
   client_max_body 4G;
 	location / {
     root /data/www;
