--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -2,12 +2,15 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name mywebsite.com mywebsite.com;
-  index index.html;
-  root /data/www;
-	error_page 404 /variables/errors/411.html;
-  client_max_body 4G;
+  	index index.html;
+  	root /data/www;
+  	client_max_body 4G;
 	location / {
     root /data/www;
 	allowed_methods GET;
+	index index.html;
+	}
+	location /cgi-bin {
+		root /data/errors;
 	}
 }
