--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -6,12 +6,12 @@ server {
   	root /data/www;
   	client_max_body 4G;
 	location / {
-    root /data/www;
+    root /data;
 	allowed_methods GET;
 	index index.html;
 	}
 	location /cgi-bin {
 		root /data/errors;
-		upload_dir /data/uploads;
+		# upload_dir /data/uploads;
 	}
 }
