Clean version ready to be merged to the main or replace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,8 @@
         "ranges": "cpp",
         "span": "cpp",
         "cinttypes": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "csignal": "cpp"
     },
     "github.copilot.enable": {
         "*": false,
