--- a/configuration_files/simple.conf
+++ b/configuration_files/simple.conf
@@ -11,7 +11,7 @@ server {
 	index index.html;
 	}
 	location /cgi-bin {
-		root /data/errors;
-		# upload_dir /data/uploads;
+	root /data/cgi;
+	upload_dir /data/uploads;
 	}
 }
