--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -2,6 +2,7 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name localhost localhost.com;
+
 	location / {
     root /variables;
 		index index.html;
@@ -18,29 +19,16 @@ server {
 		index delete_test.html;
 	}
 
-	location /cgi-bin {
-		root /variables/cgi;
-	}
-
-	location /uploads {
-		root /variables/cgi;
-		client_max_body 1g;
-		index upload_form.py;
-		allowed_methods POST DELETE;
-	}
-
 	location /gallery {
 		root /variables;
 		auto_index on;
 	}
 
-	location /time{
+	location /cgi-bin{
 		root /variables/cgi;
-		index time.py;
-	}
-
-	location /img {
-		root /variables/img;
+		client_max_body 1g;
+		allowed_methods GET POST DELETE;
+		upload_dir /variables/my_uploads;
 	}
 
 	location /old_blog {
