fixed filesystem error

--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -2,7 +2,6 @@ server {
 	listen 8080;
 	host 127.0.0.1;
 	server_name localhost localhost.com;
-
 	location / {
     root /variables;
 		index index.html;
@@ -23,6 +22,10 @@ server {
 	location /gallery {
 		root /variables;
 		auto_index on;
+	}
+
+	location /img {
+		root /variables/img;
 	}
 
 	location /cgi-bin{
