--- a/configuration_files/default.conf
+++ b/configuration_files/default.conf
@@ -5,7 +5,7 @@ server {
 	location / {
     root /variables;
 		index index.html;
-		error_page 404 /errors/403.html;
+		error_page 404 /variables/errors/404.html;
 	}
 
 	location /blog {
@@ -45,7 +45,7 @@ server {
 }
 
 server {
-	listen 8080;
+	listen 8081;
 	host 127.0.0.1;
 	server_name mywebsite.com;
 	location / {
